css/style.css
/* RESET */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a {
  text-decoration: none;
  color: inherit;
}

body {
  font-family: PT Sans;
}

img {
  max-width: 100%;
  display: block;
}

/* COMMON */

.container {
  width: 100%;
  justify-content: space-between;
  align-items: center;
}

:root {
  --header-color: #0084FD;
  --box-color: #B5DDFF;
  --main-color: #9792E4;
  --free-color: #FDC15F;
  --footer-color: #333333;
  --text-color: #5A6E7F;
}

/* /COMMON */

/* UTILITIES */
.flex {
  display: flex;
}

/* /UTILITIES */

/* HEADER */
.header {
  background-color: var(--header-color);
  /* debug*/
  height: 70px;
  line-height: 70px;
}

.header-menu {
  display: none;
}

.header-menu ul {
  display: flex;
  gap: 15px;
  list-style-type: none;
  color: white;
  padding-right: 40px;
}

.header-logo {
  padding-left: 40px;
}

.hamburger-menu {
  padding-right: 40px;
}

.hamburger-menu-btn {
  background-color: transparent;
  border: 0;
  font-size: 1.7rem;
  color: white;
}

.get-started {
  color: black;
  background-color: white;
  border-radius: 20px;
  padding: 10px;
}
/* media query header */
@media screen and (min-width: 768px) {
  .header-logo {
    padding-left: 20px;
  }
}

@media screen and (min-width: 992px) {

  .header .container {
    width: 70%;
  }

  .header-menu {
    display: block;
  }

  .hamburger-menu {
    display: none;
  }

  .colums {
    padding: 50px 0;
  }

}
/* /media query header */

/* /HEADER */

/* MAIN */

/* 5 cards section */

.colums {
  padding: 50px 40px;
}

.col {
  background-color: var(--box-color);
  border-radius: 10px;
  margin-bottom: 20px;
}

#card-section h3 {
  color: var(--header-color);
  font-size: 1.5rem;
  text-align: center;
  padding: 0 20px;
  padding-top: 20px;
}

#card-section p {
  color: var(--text-color);
  font-size: 1rem;
  font-weight: bold;
  text-align: left;
  padding: 20px;
  padding-bottom: 50px;
  line-height: 25px;
}

#card-section a {
  background-color: var(--header-color);
  text-align: center;
  padding: 10px 40px;
  margin: 0 80px;
  border-radius: 20px;
  color: white;
}

#card-section img {
  padding-top: 30px;
}

.icons {
  color: var(--header-color);
  display: flex;
  justify-content: center;
  padding-top: 20px;
  font-size: 3.5rem;
}
/* media query 5 cards section */

@media screen and (min-width: 768px) {
  .container {
    width: 90%;
    justify-content: space-between;
    margin: 0 auto;
  }

  .colums {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 20px;
  }

  #card-section .col {
    width: 30%;
  }

  #card-section .col:nth-child(1) {
    width: calc(60% + 20px)
  }

  .colums {
    padding: 50px 0;

  }

  .hamburger-menu {
    padding-right: 20px;
  }

  #card-section .col:nth-child(1) {
    justify-content: left;
  }

  #card-section h3 {
    text-align: left;
  }

  #card-section a {
    margin: 10px;
  }

  #card-section img {
    width: 50%;
  }

}

@media screen and (min-width: 992px) {
  #card-section .container {
    width: 70%;
  }

  #card-section img {
    width: 100%;
  }
}

@media screen and (min-width: 992px) {
  #card-section .col:nth-child(1) {
    display: flex;
  }
  
  .phone-img {
    display: flex;
    align-items: end;
  }
  /* #card-section img {
    transform: translateY(56%);
  } */
}
/* /media quert 5 cards section */

/* /5 card section */

/* strategic section */

main .planning {
  background-color: var(--main-color);
}

.planning .container {
  padding: 50px 0;
}

.item {
  width: 90%;
  margin: 40px auto;
}

.developement {
  background-color: white;
  border-radius: 30px;
}

#strategic-section h2 {
  text-align: center;
  color: white;
  font-size: 1.5rem;
  padding: 20px;
}

#strategic-section p {
  padding: 20px;
  color: white;
}

#strategic-section .developement p {
  color: black;
  font-style: italic;
  text-align: center;
  padding-bottom: 20px;
}

#strategic-section h3 {
  text-align: center;
  padding-top: 20px;
}

.arrow {
  height: 50px;
  width: 50px;
  background-color: var(--main-color);
  padding: 20px;
  border-radius: 50%; 
}

#strategic-section .developement .flex {
  justify-content: center;
  padding-bottom: 30px;
}
/* media query strategic section */
@media screen and (min-width: 992px) {
  .planning .container {
    width: 65%;
    display: flex;
    gap: 20px;
    align-items: flex-end;
  }

  .item {
    margin: 0;
  }

  #strategic-section h2 {
    padding: 70px 30px;
  }

  #strategic-section p {
    line-height: 30px;
    padding-bottom: 30px;
  }
}

/* /media query strategic section */

/* /strategic section */

/* testimonial section */

#testimonials-section .colums .partners {
  background-color: white;
  /* debug */
  border: 1px solid black;
}

#testimonials-section .col {
  background-color: var(--main-color);
  /* debug */
  height: 500px;
}

/* media query testimonials section */
@media screen and (min-width: 768px) {
  #testimonials-section .colums {
    display: block;
  }

  #testimonials-section .col {
    height: 200px;
  }
}

@media screen and (min-width: 992px) {
  #testimonials-section .container {
    width: 70%;
    padding: 50px;
  }
}

/* /media query testimonials section */

/* /testimonials section */

/* benefits section */

#benefits-section {
  background-color: var(--main-color);
  padding-top: 30px;
}

#benefits-section .colums .col {
  background-color: white;
  /* debug */
  height: 300px;
}

.title-benefits {
  width: 80%;
  background-color: white;
  margin: 0 auto;
  /* debug */
  height: 80px;
  border: 1px solid black;
}

/* media query benefits section */

@media screen and (min-width: 768px) {
  #benefits-section .col {
    width: calc(100% / 2 - 40px)
  }
}

@media screen and (min-width: 992px) {
  #benefits-section .col {
    width: calc(100% / 3 - 40px);
  }
}

/* /media query benefits section */

/* /benefits section */

/* media query about section */
@media screen and (min-width: 768px) {
  #about-section .container .colums{
    display: flex;
  }
  #about-section .col:nth-child(1) {
    width: calc(59% - 20px)
  }
  
  #about-section .col:nth-child(2) {
    width: calc(39% - 20px)
  }
}

@media screen and (min-width: 992px) {
  #about-section .container {
    width: 65%;
  }
  
}
/* /media query about section */

/* cta section */
#cta-section {
  background-color: var(--main-color);
  padding: 30px;
}
.small-container {
  width: 99%;
  max-width: 500px;
  margin: 0 auto;
  /* debug */
  height: 800px;
  background-color: white;
}

/* media query cta section */
@media screen and (min-width: 768px) {
  .small-container {
    width: 85%;
  }
  
}

@media screen and (min-width: 992px) {
  .small-container {
    width: 70%;
  }
  
}
/* /media query cta section */

/* /cta section */

/* /MAIN */

/* footer */
footer {
  background-color: var(--footer-color);
  padding: 30px;
}
/* /footer */

